old/k8s-on-proxmox/gitops/apps/expose-hubble/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hubble
  namespace: kube-system
  annotations:
    cert-manager.io/cluster-issuer: homelab-ca
spec:
  ingressClassName: traefik
  tls:
    - hosts: ['hubble.trust.k8s.internal']
      secretName: hubble-tls
  rules:
    - host: hubble.trust.k8s.internal
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hubble-ui
                port:
                  number: 80
